--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,13 +6,15 @@ Authors@R:
            comment = c(ORCID = "0000-0003-4781-4346"))
 Description: What the package does (one paragraph).
 License: MIT + file LICENSE
+URL: https://github.com/r4ds/shinysocial,
+    https://r4ds.github.io/shinysocial/
+BugReports: https://github.com/r4ds/shinysocial/issues
 Imports: 
     shiny
 Suggests: 
+    covr,
     testthat (>= 3.1.6)
 Config/testthat/edition: 3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
-URL: https://github.com/r4ds/shinysocial
-BugReports: https://github.com/r4ds/shinysocial/issues
