--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: shinysocial
-Title: What the Package Does (One Line, Title Case)
+Title: Social Media Modules for 'shiny'
 Version: 0.0.0.9000
 Authors@R: 
     person("Jon", "Harmon", , "jonthegeek@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-4781-4346"))
-Description: What the package does (one paragraph).
+Description: Standardized, clean modules for collecting, displaying, and
+    using social media information in 'shiny' apps.
 License: MIT + file LICENSE
 URL: https://github.com/r4ds/shinysocial,
     https://r4ds.github.io/shinysocial/
