--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,10 @@
 Package: shinysocial
 Title: Social Media Modules for 'shiny'
 Version: 0.0.0.9000
-Authors@R: 
-    person("Jon", "Harmon", , "jonthegeek@gmail.com", role = c("aut", "cre"),
-           comment = c(ORCID = "0000-0003-4781-4346"))
+Authors@R: c(
+    person("Jon", "Harmon", , "jonthegeek@gmail.com", role = c("aut", "cre", 
+           "cph"), comment = c(ORCID = "0000-0003-4781-4346"))
+    )
 Description: Standardized, clean modules for collecting, displaying, and
     using social media information in 'shiny' apps.
 License: MIT + file LICENSE
